--- a/index.html
+++ b/index.html
@@ -2,55 +2,54 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="js/Metodo_cifrado.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Metodo Julio Cesar</title>
+    <script src="js/Metodo_cifrado.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <h2 style="text-align: center;">Metodo de Julio Cesar</h2>
-  <p>En criptografía, el cifrado César, también conocido como cifrado por desplazamiento, código de César o
-    desplazamiento de César, es una de las técnicas de codificación más simples y más usadas. Es un tipo de cifrado por
-    sustitución en el que una letra en el texto original es reemplazada por otra letra que se encuentra un número fijo
-    de posiciones más adelante en el alfabeto. Por ejemplo, con un desplazamiento de 3, la A sería sustituida por la D
-    (situada 3 lugares a la derecha de la A ), la B sería reemplazada por la E, etc. Este método debe su nombre, según
-    Suetonio, a Julio César, que lo usaba para comunicarse con sus generales.</p>
-  <div style="display: flex; justify-content: space-between; margin-top: 40px;">
-    <form style="width: 35%; margin: auto;">
-      <!-- Primer formulario -->
-      <div class="form-group">
-        <label for="exampleInputEmail1" style="width: 100%; text-align: center;">Ingrese el mensaje a cifrar</label>
-        <input style="width: 100%;" type="text" id="mensaje_cifrar" onkeypress="filtro(event, 'caracteres')" />
-      </div>
-      <div class="form-group" style="width: 50%;">
-        <label for="exampleInputEmail1" style="width: 100%; text-align: center;">Ingrese la clave de cifrado</label>
-        <input type="number" max="25" min="1" onkeypress="filtro(event, 'numeros')" class="form-control"
-          id="clave_cifrado1">
-      </div>
-      <button onclick="cifrar()" type="submit" class="btn btn-primary">Cifrar</button>
-    </form>
-
-    <form style="width: 35%; margin: auto;">
-      <!-- Segundo formulario -->
-      <div class="form-group">
-        <label for="exampleInputPassword1" style="width: 100%; text-align: center;">Ingrese el mensaje a
-          descifrar</label>
-        <input style="width: 100%;" type="text" id="mensaje_descifrar" onkeypress="filtro(event, 'caracteres')" />
-      </div>
-      <div class="form-group" style="width: 50%;">
-        <label for="exampleInputEmail1" style="width: 100%; text-align: center;">Ingrese la clave de cifrado</label>
-        <input max="25" min="1" onkeypress="filtro(event, 'numeros')" type="number" class="form-control"
-          id="clave_cifrado2" aria-describedby="emailHelp">
-      </div>
-      <button onclick="descifrar()" type="submit" class="btn btn-primary">descifrar</button>
-    </form>
-  </div>
-
-
+    <div class="container">
+        <div class="card-container">
+            <div class="card">
+                <img class="card-img-top"
+                    src="https://pymstatic.com/61302/conversions/julio-cesar-wide_webp.webp" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Metodo Julio Cesar</h5>
+                    <p class="card-text">¿Has oído hablar alguna vez del Código César? Es el algoritmo de cifrado más antiguo, es un tipo de cifrado de sustitución simple. Consiste en reemplazar una letra en el texto original por otra letra que se encuentra en un número fijo de posiciones más adelante en el alfabeto. Por ejemplo, usando un desplazamiento de 4 posiciones, la letra “A” se reemplazaría por la “E”, la letra “B” por la “F”, y así sucesivamente. Es una forma bastante eficaz de proteger tu información. Hoy en día, con la cantidad de ciberataques que existen, es importante tener conocimientos básicos de cifrado. 
+                        <a href="https://cibertrs.com/codigo-cesar-cifrado-sencillo-pero-eficaz/">Leer mas...</a></p>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="form">
+            <div id="respuesta-container" class="maquina-escribir"></div>
+            <form>
+                <div class="form-group">
+                    <label for="mensaje">Ingrese el mensaje</label>
+                    <input type="text" id="mensaje" onkeypress="filtro(event, 'caracteres')" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="clave_cifrado1">Ingrese la clave de cifrado</label>
+                    <input type="number" max="25" min="1" onkeypress="filtro(event, 'numeros')" class="form-control"
+                        id="clave_cifrado1">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="accion" id="inlineRadio1" value="cifrar">
+                        <label class="form-check-label" for="inlineRadio1">Cifrar</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="accion" id="inlineRadio2" value="descifrar">
+                        <label class="form-check-label" for="inlineRadio2">Descifrar</label>
+                    </div>
+                </div>
+                <button type="button" onclick="enviarAccion()" class="btn btn-primary"
+                    style="background-color: green; font-size: 23px; width: 200px;">Enviar</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
