--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Metodo Julio Cesar</h5>
                     <p class="card-text">¿Has oído hablar alguna vez del Código César? Es el algoritmo de cifrado más antiguo, es un tipo de cifrado de sustitución simple. Consiste en reemplazar una letra en el texto original por otra letra que se encuentra en un número fijo de posiciones más adelante en el alfabeto. Por ejemplo, usando un desplazamiento de 4 posiciones, la letra “A” se reemplazaría por la “E”, la letra “B” por la “F”, y así sucesivamente. Es una forma bastante eficaz de proteger tu información. Hoy en día, con la cantidad de ciberataques que existen, es importante tener conocimientos básicos de cifrado. 
-                        <a href="https://cibertrs.com/codigo-cesar-cifrado-sencillo-pero-eficaz/">Leer mas...</a></p>
+                        <a href="https://cibertrs.com/codigo-cesar-cifrado-sencillo-pero-eficaz/">Leer mas...</a> <br> Integrantes: <br>-Alex Varela<br>-Santiago Hernandez</p>
                     
                 </div>
             </div>
