--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metodo Julio Cesar</title>
     <script src="js/Metodo_cifrado.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -32,18 +33,18 @@
             <form>
                 <div class="form-group">
                     <label for="mensaje">Ingrese el mensaje</label>
-                    <input type="text" id="mensaje" onkeypress="filtro(event, 'caracteres')" class="form-control" />
+                    <input required="true" type="text" id="mensaje" onkeypress="filtro(event, 'caracteres')" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label for="clave_cifrado1">Ingrese la clave de cifrado</label>
-                    <input type="number" max="25" min="1" onkeypress="filtro(event, 'numeros')" class="form-control"
+                    <input type="number" required="true" max="25" min="1" onkeypress="filtro(event, 'numeros')" class="form-control"
                         id="clave_cifrado1">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="accion" id="inlineRadio1" value="cifrar">
+                        <input checked class="form-check-input" type="radio" name="accion" id="radio" value="cifrar">
                         <label class="form-check-label" for="inlineRadio1">Cifrar</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="accion" id="inlineRadio2" value="descifrar">
+                        <input class="form-check-input" type="radio" name="accion" id="radio" value="descifrar">
                         <label class="form-check-label" for="inlineRadio2">Descifrar</label>
                     </div>
                 </div>
