--- a/JulioCesar.html
+++ b/JulioCesar.html
@@ -19,7 +19,7 @@
         <img class="card-img-top" src="https://pymstatic.com/61302/conversions/julio-cesar-wide_webp.webp"
             alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Metodo Julio Cesar</h5>
+            <h5 class="card-title">Método Julio Cesar</h5>
             <p class="card-text">¿Has oído hablar alguna vez del Código César? Es el algoritmo de cifrado más
                 antiguo, es un tipo de cifrado de sustitución simple. Consiste en reemplazar una letra en el
                 texto original por otra letra que se encuentra en un número fijo de posiciones más adelante en
